# integer_complexity

./: .gitignore  README.md  integer_complexity_all_forward.cpp  log_complexity_primes.cpp  single.cpp  single_p^i.cpp  single_p^i_output.cpp
C-Quadratic-Sieve_C++/: README.md  c_rho-128-bits.h  compile.bat  compile1.bat  compile2.bat  compile_output.bat  compile_sample.bat  data.txt  fac_headers.h  fac_lanczos.c  fac_quadratic.c  fac_utils.c  factorization.h  main.c  run.bat  single.cpp  single_new.cpp  single_new_factor.cpp  single_new_output.cpp  single_output.cpp  single_sample_test.cpp  utils.h
experiments/: func_fit.py  stats.py  新文件 1.txt
integer-complexity-128/: CMakeLists.txt  allocator.h  avl.c  cint.c  compile.bat  fac_lanczos.c  fac_quadratic.c  fac_testing.c  fac_utils.c  factorization.h  single.cpp  single_old.cpp  statistics.h  utils.h
markov_chain/: solve_markov_chain.cpp
old/: Martin_Fuller.cpp  integer_complexity_all.cpp  integer_complexity_single.cpp  integer_complexity_single_2i3j5k.cpp
others/: ave_path_cost.cpp  ave_path_cost_diff.cpp  ave_path_cost_new.cpp
upper_bound/: Int.h  Int.h.gch  Int1.h  Int_3D.h  Int_3D.h.gch  compile.bat  consts.h  greedy.py  horner_base2and3.cpp  upper_bound.cpp  upper_bound_3D.cpp  upper_bound_n^2.cpp  upper_bound_slow.cpp  upper_bound_slow_3D.cpp  upper_bound_slow_3primes.cpp  upper_bound_slow_4D.cpp  upper_bound_slow_5D.cpp  upper_bound_slow_5D_all.cpp  upper_bound_slow_5D_optimize.cpp  upper_bound_slow_path.cpp  upper_bound_test_heuristics.cpp
